FilmReview.kt - add icon and button refresh to error state

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="avg_rating">Средняя оценка: </string>
     <string name="searchbar_hint">Search…</string>
     <string name="top_app_title">Обзор фильма</string>
+    <string name="refresh_string">Перезагрузить</string>
 </resources>
