--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,13 @@
     <string name="unexpected_error">Unexpected error occurred</string>
     <string name="connection_error">Couldn\'t reach server</string>
     <string name="release_date">Дата релиза: %1$s</string>
+    <string name="review">Рецензия:</string>
     <string name="avg_rating">Средняя оценка: %1$f</string>
     <string name="searchbar_hint">Search…</string>
     <string name="top_app_title">Обзор фильма</string>
     <string name="refresh_string">Перезагрузить</string>
     <string name="not_found">Не найдены</string>
+    <string name="actors">Актеры:</string>
+    <string name="posters">Постеры:</string>
+    <string name="watchVideo">Смотреть видео</string>
 </resources>
