--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,10 @@
     <string name="searchbar_hint">Search…</string>
     <string name="top_app_title">Фильмы</string>
     <string name="refresh_string">Перезагрузить</string>
-    <string name="not_found">Не найдены</string>
+    <string name="not_found">По запросу %1$s фильмы не найдены</string>
     <string name="actors">Актеры:</string>
     <string name="posters">Постеры:</string>
     <string name="watch_video">Смотреть видео</string>
     <string name="delete_favorite">Удалить избранное</string>
     <string name="add_favorite">Добавить в избранное</string>
-    <string name="path">%1$s%2$s</string>
 </resources>
