--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="review_list">View review list</string>
     <string name="delete_favorite">dislike</string>
     <string name="add_favorite">like</string>
+    <string name="author">Author: %1$s</string>
 </resources>
