--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="add_favorite">like</string>
     <string name="author">Author: %1$s</string>
     <string name="popularity">Popularity: %1$s</string>
+    <string name="films">Films</string>
 </resources>
